# app_zephyr

./: .gitignore  .gitmodules
develop/: CMakeLists.txt  Kconfig  Readme.md
develop/app/dmp_mpu6050/: CMakeLists.txt  Readme.md  prj.conf
develop/app/dmp_mpu6050/boards/: dk_nrf52832.overlay
develop/app/dmp_mpu6050/configs/: rtt.conf
develop/app/dmp_mpu6050/src/: button.c  led.c  main.c
develop/app/hello_world/: prj.conf
develop/app/hello_world/boards/: stm32g0316_disco.conf  stm32g0316_disco.overlay
develop/app/road_led/: app.overlay  prj.conf
develop/app/road_led/boards/: dk_nrf52832.overlay  linkit_nrf52832.overlay
develop/app/road_led/configs/: rtt.conf
develop/app/road_led/src/: main.c
develop/app/test/: CMakeLists.txt  Kconfig  Readme.md  prj.conf
develop/app/test/src/: main.c
develop/boards/arm/dk_nrf52832/: Kconfig  Kconfig.board  Kconfig.defconfig  dk_nrf52832.dts  dk_nrf52832.yaml  dk_nrf52832_defconfig
develop/drivers/: CMakeLists.txt  Kconfig
develop/drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.m031  clock_m031.c
develop/drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.m031  flash_m031.c
develop/drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.m031  gpio_m031.c
develop/drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.m031  pinctrl_m031.c
develop/drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.m031  uart_m031.c
develop/dts/bindings/: vendor-prefixes.txt
develop/hal/: CMakeLists.txt  Kconfig
develop/soc/arm/: CMakeLists.txt
develop/zephyr/: module.yml
tools/openocd/interface/: jlink-swd.cfg
(+36 files in other folders)
